--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ dj-database-url==0.5.0
 whitenoise==5.1.0
 django-celery-beat==2.0.0
 django-admin-honeypot
-django-nested-inlines==0.1
+django-nested-admin==3.3.2
 django-phonenumber-field==5.0.0
 webcolors==1.11.1
 django-tinymce==3.1.0
