--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,4 @@ sorl-thumbnail-serializer-field==0.2.1
 djangorestframework-recursive==0.1.2
 celery==4.4.4
 django-colorfield==0.3.2
+rest-framework-generic-relations==2.0.0
