--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,5 @@ staticfiles/
 !**/migrations/__init__.py
 shop/fixtures/rad.json
 rad/settings/local.py
+static/css/bootstrap-icons
 rad/settings/pythonanywhere.py
