--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-celery-beat==2.0.0
 django-admin-honeypot
 django-nested-admin==3.3.2
 django-phonenumber-field[phonenumbers]==5.0.0
+# sorl-thumbnail==12.6.3
 webcolors==1.11.1
 django-tinymce==3.1.0
 sorl-thumbnail-serializer-field==0.2.1
