--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-taggit==1.2.0
 humanize==0.5.1
 idna==2.9
 Pillow==7.1.2
-psycopg2==2.8.5
+psycopg2
 pytz==2020.1
 requests==2.23.0
 sqlparse==0.3.1
